Revision history for Perl module Net::VNC:

0.37 ?
  - Perltidy
  - Fix problem with passwords over 8 characters (spotted by binox)
  - Fix default image name in vnccapture (patch by Joe Julian)

0.36 Fri Jun 29 19:58:51 BST 2007
  - make vnccapture's outfile option work (patch by Owen Crow)

0.35 Fri Jul 28 11:41:23 BST 2006
  - fix typo-d 'has_alpha' which breaks with recent Image::Imlib2

0.34 Thu Jul 27 12:12:57 BST 2006
  - fixed failing cursor bug with realvnc 3.3

0.33 Sun Jun 25 16:13:33 BST 2006
  - fixed a few cross-endian bugs (thanks to Chris Dolan again!)

0.32 Tue Apr 25 20:03:09 BST 2006
  - many patches from Chris Dolan:
  - Added optional support for the mouse cursor
  - Support for CoRRE encoding
  - performance enhancement: split out the 8/16/24 bit support into
    their own modes
  - rearchitected the encoding system: list all known, but flag them
    as supported or not
  - ... this will simplify the addition of new encodings
  - ... this allows enabling/disabling classes of encodings (like cursor)
  - bugfix for signedness of encoding type
  - added skeletal support for the remaining server messages: cut-text and bell

0.31 Mon Mar 13 20:05:27 GMT 2006
        - 24-bit truecolour support
        - non-authenticated login
        - incremental update
        - all provided by Chris Dolan

0.30 Mon Jan 23 10:12:05 GMT 2006
        - die with a more accurate reason if there was an error
          connecting
        - drop the connection timeout to 15 seconds
        - reordered documentation to try and confuse Leo less

0.29 Thu Jan 19 15:56:05 GMT 2006
        - first release